tests/ui/lang/consts/nested-ref-in-composite.stderr
error[E0432]: unresolved import `glam::const_mat2`
 --> $DIR/nested-ref-in-composite.rs:8:12
  |
8 | use glam::{const_mat2, Mat2, Vec2};
  |            ^^^^^^^^^^ no `const_mat2` in the root

error: aborting due to previous error

For more information about this error, try `rustc --explain E0432`.
